<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/team" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/abc_text_size_large_material"
        android:textColor="#000000" />

    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:text="@string/continu"
        android:id="@+id/continu"
        android:onClick="continu" />

    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:text="@string/instructions"
        android:id="@+id/instructions"
        android:onClick="instructions" />

    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:text="@string/new_game"
        android:id="@+id/new_game"
        android:onClick="newGame" />

</LinearLayout>
